# fabric-launcher

./: fabric.desktop.launcher.desktop.in  meson.build  package.nix
resources/: launcher.css  meson.build  resources.gresource.xml
src/: application_data.vala  launcher_state.vala  main.vala  meson.build  service.vala
